--- a/Patients/src/main/resources/templates/patient/list.html
+++ b/Patients/src/main/resources/templates/patient/list.html
@@ -12,6 +12,9 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
 	integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
 	crossorigin="anonymous">
+	
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -38,33 +41,56 @@
 			</div>
 		</div>
 	</nav>
-	
-	
-	<div class="row">
-		<form action="#" th:action="@{/trade/validate}" th:object="${patientAdd}" method="post" class="form-horizontal" style="width: 100%">
-			<div class="form-group">
-				<label for="givenName" class="col-sm-2 control-label">Given Name</label>
-				<div class="col-sm-10">
-					<input type="text" th:field="*{givenName}" id="givenName" placeholder="GivenName" class="col-4">
-					<p class="text-danger" th:if="${#fields.hasErrors('givenName')}" th:errors="*{givenName}"></p>
-				</div>
-			</div>
-			<div class="form-group">
-				<label for="familyName" class="col-sm-2 control-label">Family Name</label>
-				<div class="col-sm-10">
-					<input type="text" th:field="*{familyName}" id="familyName" placeholder="FamilyName" class="col-4">
-					<p class="text-danger" th:if="${#fields.hasErrors('familyName')}" th:errors="*{familyName}"></p>
-				</div>
-			</div>
+
+	<div class="container col-md-6 mb-2">
+		<div class="row">
+			<div class="col-12 d-flex justify-content-center mt-3 mb-3 list-patients">List of patients</div>
+			<table class="table table-bordered">
+				<thead>
+					<tr class="table-info">
+						<th class="text-center">Id</th>
+						<th class="text-center">Given Name</th>
+						<th class="text-center">Family Name</th>
+						<th class="text-center">Date of Birth</th>
+						<th class="text-center">Gender</th>
+						<th class="text-center">Address</th>
+						<th class="text-center">Phone</th>
+						<th class="text-center">Action</th>
+					</tr>
+				</thead>
+
+				<tbody>
+					<tr th:if="${patientList.empty}">
+						<td> No Patients on a list </td>
+					</tr>
+					<tr th:each="patient : ${patientList}">
+						<td style="width: 10%" th:text="${patient.id}"></td>
+						<td th:text="${patient.givenName}"></td>
+						<td th:text="${patient.familyName}"></td>
+						<td th:text="${patient.dob}"></td>
+						<td th:text="${patient.sex}"></td>
+						<td th:text="${patient.address}"></td>
+						<td th:text="${patient.phone}"></td>
+						<td style="width: 12%" class="text-center">
+							<a th:href="@{/patient/update/{id}(id=${patient.id})}"><i class="fas fa-edit"></i>Edit</a>&nbsp;|&nbsp;
+							<a th:href="@{/patient/delete/{id}(id=${patient.id})}">Delete</a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
 			
-			<div class="form-group">
-                <div class="col-sm-12">
-                    <a class="btn btn-danger btn-sm" href="/patient/list">Cancel</a>
-                    <input class="btn btn-primary btn-sm" type="submit" value="Save">
-                </div>
-            </div>
-		</form>
+			<a href="/patient/add" class="col-12 d-flex justify-content-center btn btn-lg btn-info mb-5 mt-3">Add new patient</a>
+		</div>
 	</div>
+
+	<style>
+		.list-patients {
+			font-family: "Lucida Console", "Courier New", monospace;
+			font-size: 30px;
+			font-weight: bold;
+			color: #17a2b8;
+		}
+	</style>
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
