adding application.properties with H2 database for testing patients

--- a/Patients/src/main/resources/templates/patient/list.html
+++ b/Patients/src/main/resources/templates/patient/list.html
@@ -72,7 +72,7 @@
 						<td th:text="${patient.address}"></td>
 						<td th:text="${patient.phone}"></td>
 						<td style="width: 12%" class="text-center">
-							<a th:href="@{/patient/update/{id}(id=${patient.id})}"><i class="fas fa-edit"></i>Edit</a>&nbsp;|&nbsp;
+							<a th:href="@{/patient/update/{id}(id=${patient.id})}"></i>Edit</a>&nbsp;|&nbsp;
 							<a th:href="@{/patient/delete/{id}(id=${patient.id})}">Delete</a>
 						</td>
 					</tr>
