--- a/Patients/src/main/resources/templates/patient/update.html
+++ b/Patients/src/main/resources/templates/patient/update.html
@@ -44,21 +44,21 @@
 			<form action="#" th:action="@{/patient/update/{id}(id=${patient.id})}" th:object="${patient}" method="post" class="form-horizontal" style="width: 100%">
 				<div class="form-group">
 					<label for="givenName" class="col-sm-2 control-label">Given Name</label>
-					<div class="col-sm-10">
+					<div class="col-sm-12">
 						<input type="text" th:field="*{givenName}" id="givenName" placeholder="GivenName" class="col-4">
 						<p class="text-danger" th:if="${#fields.hasErrors('givenName')}" th:errors="*{givenName}"></p>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="familyName" class="col-sm-2 control-label">Family Name</label>
-					<div class="col-sm-10">
+					<div class="col-sm-12">
 						<input type="text" th:field="*{familyName}" id="familyName" placeholder="FamilyName" class="col-4">
 						<p class="text-danger" th:if="${#fields.hasErrors('familyName')}" th:errors="*{familyName}"></p>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="dob" class="col-sm-2 control-label">Date of Birth</label>
-					<div class="col-sm-10">
+					<div class="col-sm-12">
 						<input type="text" th:field="*{dob}" id="dob" placeholder="Date of Birth: yyyy-MM-dd" class="col-4">
 						<p class="text-danger" th:if="${#fields.hasErrors('dob')}" th:errors="*{dob}"></p>
 					</div>
@@ -66,22 +66,23 @@
 				
 				<div class="form-group">
 					<label for="sex" class="col-sm-2 control-label">Gender</label>
-					<div class="col-sm-10">
+					<div class="col-sm-12">
 						<label class="checkbox-inline"><input type="radio" th:field="*{sex}" th:value="Male">Male</label>
 						<label class="checkbox-inline"><input type="radio" th:field="*{sex}" th:value="Female">Female</label>
+						<p class="text-danger" th:if="${#fields.hasErrors('sex')}" th:errors="*{sex}"></p>
 					</div>
 				</div>	
         		
 				<div class="form-group">
 					<label for="address" class="col-sm-2 control-label">Address</label>
-					<div class="col-sm-10">
+					<div class="col-sm-12">
 						<input type="text" th:field="*{address}" id="address" placeholder="Address" class="col-4">
 						<p class="text-danger" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></p>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="phone" class="col-sm-2 control-label">Phone</label>
-					<div class="col-sm-10">
+					<div class="col-sm-12">
 						<input type="text" th:field="*{phone}" id="phone" placeholder="Phone" class="col-4">
 						<p class="text-danger" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></p>
 					</div>
