finshing all PatientControllerTests

--- a/Patients/src/main/resources/templates/patient/add.html
+++ b/Patients/src/main/resources/templates/patient/add.html
@@ -41,7 +41,7 @@
 
 	<div class="container col-md-12 mb-2">
 		<div class="row">
-			<form action="#" th:action="@{/patient/validate}" th:object="${patient}" method="post" class="form-horizontal" style="width: 100%">
+			<form action="#" th:action="@{/patient/save}" th:object="${patient}" method="post" class="form-horizontal" style="width: 100%">
 				<div class="form-group">
 					<label for="givenName" class="col-sm-2 control-label">Given Name</label>
 					<div class="col-sm-12">
