--- a/Notes/src/main/resources/templates/patient/list.html
+++ b/Notes/src/main/resources/templates/patient/list.html
@@ -33,9 +33,8 @@
 
 			<div class="collapse navbar-collapse" id="navbarToggler">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="/patient/list">Patients</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Notes</a></li>
+					<li class="nav-item"><a class="nav-link" href="http://localhost:8080/patient/list">Patients</a></li>
+					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/patient/list">Notes</a></li>
 					<li class="nav-item"><a class="nav-link" href="http://localhost:8080/patient/list">Reports</a></li>
 				</ul>
 			</div>
