--- a/Patients/src/main/resources/templates/patient/add.html
+++ b/Patients/src/main/resources/templates/patient/add.html
@@ -32,8 +32,8 @@
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a class="nav-link active"
 						aria-current="page" href="/patient/list">Patients</a></li>
-					<li class="nav-item"><a class="nav-link" href="http://localhost:8082/note/patient/list">Notes</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Reports</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Notes</a></li>
+					<li class="nav-item"><a class="nav-link" href="http://localhost:8080/patient/list">Reports</a></li>
 				</ul>
 			</div>
 		</div>
