--- a/Reports/src/main/resources/templates/patient/list.html
+++ b/Reports/src/main/resources/templates/patient/list.html
@@ -33,10 +33,10 @@
 
 			<div class="collapse navbar-collapse" id="navbarToggler">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link active"
+					<li class="nav-item"><a class="nav-link"
 						aria-current="page" href="http://localhost:8081/patient/list">Patients</a></li>
-					<li class="nav-item"><a class="nav-link" href="note/patient/list">Notes</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Reports</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Notes</a></li>
+					<li class="nav-item"><a class="nav-link active" href="/patient/list">Reports</a></li>
 				</ul>
 			</div>
 		</div>
@@ -72,8 +72,8 @@
 						<td th:text="${patient.address}"></td>
 						<td th:text="${patient.phone}"></td>
 						<td style="width: 12%" class="text-center">
-							<a th:href="@{/note/add/{patientId}(patientId=${patient.id})}">Add a Note</a>&nbsp;|&nbsp;
-							<a th:href="@{/note/list/{patientId}(patientId=${patient.id})}">View Patient's Notes</a>
+							<a th:href="@{/patient/update/{id}(id=${patient.id})}"></i>Edit</a>&nbsp;|&nbsp;
+							<a th:href="@{/patient/delete/{id}(id=${patient.id})}">Delete</a>
 						</td>
 					</tr>
 				</tbody>
