--- a/Reports/src/main/resources/templates/patient/update.html
+++ b/Reports/src/main/resources/templates/patient/update.html
@@ -30,10 +30,10 @@
 
 			<div class="collapse navbar-collapse" id="navbarToggler">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="/patient/list">Patients</a></li>
+					<li class="nav-item"><a class="nav-link"
+						aria-current="page" href="http://localhost:8081/patient/list">Patients</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Notes</a></li>
-					<li class="nav-item"><a class="nav-link" href="http://localhost:8080/patient/list">Reports</a></li>
+					<li class="nav-item"><a class="nav-link active" href="/patient/list">Reports</a></li>
 				</ul>
 			</div>
 		</div>
