--- a/Reports/pom.xml
+++ b/Reports/pom.xml
@@ -15,12 +15,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.openclassrooms</groupId>
-			<artifactId>Patients</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.openclassrooms</groupId>
-			<artifactId>Notes</artifactId>
+			<artifactId>Shared</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
