--- a/Notes/src/main/resources/templates/note/add.html
+++ b/Notes/src/main/resources/templates/note/add.html
@@ -1,43 +1,66 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
+
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Add Note</title>
-<link rel="stylesheet" href="../../css/bootstrap.min.css">
+
+<!-- Bootstrap -->
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+	integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+	crossorigin="anonymous">
 </head>
+
 <body>
-	<div class="container">
-		<div class="row">
-			<h2>Add New Note</h2>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#"> <img
+				th:src="@{/images/logo-01.png}" alt="" width="60" height="68"
+				class="d-inline-block align-text-center"> Mediascreen
+			</a>
+
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarToggler" aria-controls="navbarToggler"
+				aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarToggler">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item"><a class="nav-link active"
+						aria-current="page" href="/patient/list">Patients</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Notes</a></li>
+					<li class="nav-item"><a class="nav-link" href="http://localhost:8080/patient/list">Reports</a></li>
+				</ul>
+			</div>
 		</div>
+	</nav>
+
+	<div class="container col-md-12 mb-2">
 		<div class="row">
-			<form action="#"
-				th:action="@{/note/validate/{patientId}(patientId=${note.patientId})}"
-				method="post" class="form-horizontal" style="width: 100%">
+			<form action="#" th:action="@{/note/save/{patientId}(patientId=${note.patientId})}" method="post" class="form-horizontal" style="width: 100%">
 				<div class="form-group">
-					<label for="patientId" class="col-sm-2 control-label">Patient
-						ID</label>
-					<div class="col-sm-10">
-						<input type="text" th:field="*{note.patientId}" id="patientId"
-							placeholder="Patient ID" class="col-4" readonly="true">
-						<!--                    <p class="text-danger" th:if="${#fields.hasErrors('note.patientId')}" th:errors="*{note.patientId}"></p>-->
+					<label for="patientId" class="col-sm-2 control-label">Patient ID</label>
+					<div class="col-sm-12">
+						<input type="text" th:field="*{note.patientId}" id="patientId" placeholder="Patient ID" class="col-4" readonly="true">
+						<p class="text-danger" th:if="${#fields.hasErrors('patientId')}" th:errors="*{patientId}"></p>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="note" class="col-sm-2 control-label">Note</label>
-					<div class="col-sm-10">
-						<input type="text" th:field="*{note.note}" id="note"
-							placeholder="Note" class="col-4">
-						<p class="text-danger" th:if="${#fields.hasErrors('note.note')}"
-							th:errors="*{note.note}"></p>
+					<div class="col-sm-12">
+						<textarea input type="text" th:field="*{note.note}" id="note" placeholder="Add note for patient." class="col-4" rows="6"></textarea>
+						<p class="text-danger" th:if="${#fields.hasErrors('note')}" th:errors="*{note}"></p>
 					</div>
 				</div>
+				
 				<div class="form-group">
 					<div class="col-sm-12">
-						<a th:href="@{'/note/list/' + ${patientId}}"
-							class="btn btn-primary btn-sm">Cancel</a> <input
-							class="btn btn-primary btn-sm" type="submit" value="Save">
+						<input class="btn btn-success btn-sm" type="submit" value="Save">
+						<a th:href="@{'/note/list/' + ${patientId}}" class="btn btn-success btn-sm">Cancel</a> 
 					</div>
 				</div>
 			</form>
