--- a/Patients/src/main/resources/templates/patient/add.html
+++ b/Patients/src/main/resources/templates/patient/add.html
@@ -19,7 +19,7 @@
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#"> <img
 				th:src="@{/images/logo-01.png}" alt="" width="60" height="68"
-				class="d-inline-block"> Mediascreen
+				class="d-inline-block align-text-center"> Mediascreen
 			</a>
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -89,8 +89,8 @@
 				</div>
 				<div class="form-group">
 					<div class="col-sm-12">
-						<a class="btn btn-danger btn-sm" href="/patient/list">Cancel</a> 
 						<input class="btn btn-primary btn-sm" type="submit" value="Save">
+						<a class="btn btn-danger btn-sm" href="/patient/list">Cancel</a> 
 					</div>
 				</div>
 			</form>
