--- a/Notes/src/main/resources/templates/note/list.html
+++ b/Notes/src/main/resources/templates/note/list.html
@@ -16,7 +16,7 @@
 	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#"> <img
 				th:src="@{/images/logo-01.png}" alt="" width="60" height="68"
@@ -31,11 +31,9 @@
 
 			<div class="collapse navbar-collapse" id="navbarToggler">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="/patient/list">Patients</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Notes</a></li>
-					<li class="nav-item"><a class="nav-link"
-						href="http://localhost:8080/patient/list">Reports</a></li>
+					<li class="nav-item"><a class="nav-link" href="http://localhost:8081/patient/list">Patients</a></li>
+					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/patient/list">Notes</a></li>
+					<li class="nav-item"><a class="nav-link" href="http://localhost:8080/patient/list">Reports</a></li>
 				</ul>
 			</div>
 		</div>
@@ -43,13 +41,11 @@
 
 	<div class="container col-md-6 mb-2">
 		<div class="row">
-			<div
-				class="col-12 d-flex justify-content-center mt-3 mb-3 list-patients">List
-				of notes</div>
+			<div class="col-12 d-flex justify-content-center mt-3 mb-3 list-patients">List of notes for patient&nbsp;<span th:utext="${patientId}"></span></div>
 			<table class="table table-bordered">
 				<thead>
 					<tr class="table-success">
-						<th class="text-center">Id</th>
+						<th class="text-center">Patient Id</th>
 						<th class="text-center">Note</th>
 						<th class="text-center">Action</th>
 					</tr>
@@ -57,13 +53,13 @@
 
 				<tbody>
 					<tr th:if="${noteList.empty}">
-						<td>No Notes on a list</td>
+						<td>No Notes on a list for patient <span th:utext="${patientId}" style="font-weight: 700;"></span></td>
 					</tr>
 					<tr th:each="note : ${noteList}">
-						<td style="width: 10%" th:text="${note.id}"></td>
+						<td style="width: 10%" th:text="${patientNote.patientId}"></td>
 						<td th:text="${note.note}"></td>
 						<td style="width: 12%" class="text-center"><a
-							th:href="@{/note/update/{id}(id=${note.id})}"></i>Edit</a>&nbsp;|&nbsp;
+							th:href="@{/note/update/{id}(id=${patientNote.patientId})}"></i>Edit</a>&nbsp;|&nbsp;
 							<a th:href="@{/note/delete/{id}(id=${note.id})}">Delete</a></td>
 					</tr>
 				</tbody>
