--- a/Patients/src/main/resources/templates/patient/add.html
+++ b/Patients/src/main/resources/templates/patient/add.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Home</title>
+<title>Patient Add</title>
 
 <!-- Bootstrap -->
 <link rel="stylesheet"
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#"> <img
 				th:src="@{/images/logo-01.png}" alt="" width="60" height="68"
@@ -29,10 +29,9 @@
 			</button>
 
 			<div class="collapse navbar-collapse" id="navbarToggler">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="/patient/list">Patients</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Notes</a></li>
+				<ul class="navbar-nav ml-auto">					
+					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/patient/list">Patients</a></li>
+					<li class="nav-item"><a class="nav-link" href="http://localhost:8082/patient/list">Notes</a></li>
 					<li class="nav-item"><a class="nav-link" href="http://localhost:8080/patient/list">Reports</a></li>
 				</ul>
 			</div>
