--- a/Notes/src/main/resources/templates/note/add.html
+++ b/Notes/src/main/resources/templates/note/add.html
@@ -44,14 +44,14 @@
 					<label for="patientId" class="col-sm-2 control-label">Patient ID</label>
 					<div class="col-sm-12">
 						<input type="text" th:field="*{patientNote.patientId}" id="patientId" placeholder="Patient ID" class="col-4" readonly="true">
-						<p class="text-danger" th:if="${#fields.hasErrors('patientId')}" th:errors="*{patientId}"></p>
+						<!--<p class="text-danger" th:if="${#fields.hasErrors('patientNote.patientId')}" th:errors="*{patientNote.patientId}"></p>-->
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="note" class="col-sm-2 control-label">Note</label>
 					<div class="col-sm-12">
 						<textarea input type="text" th:field="*{note.note}" id="note" placeholder="Add note for patient." class="col-4" rows="6"></textarea>
-						<p class="text-danger" th:if="${#fields.hasErrors('note')}" th:errors="*{note}"></p>
+						<!--<p class="text-danger" th:if="${#fields.hasErrors('note.note')}" th:errors="*{note.note}"></p>-->
 					</div>
 				</div>
 				
