--- a/Notes/src/main/resources/templates/note/add.html
+++ b/Notes/src/main/resources/templates/note/add.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
+	
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,21 +38,19 @@
 		</div>
 	</nav>
 	
-	<div class="container col-md-12 mb-2">
-		<div class="row">
-			<form action="#" th:action="@{/note/save/{patientId}(patientId=${patientNote.patientId})}" method="post" class="form-horizontal" style="width: 100%">
+	<div class="container col-md-12 mb-2 mt-4">
+		<div class="row">			
+			<form action="#" th:action="@{/note/save/{patientId}(patientId=${patientNote.patientId})}" th:object="${patientNote}" method="post" class="form-horizontal" style="width: 100%">
 				<div class="form-group">
-					<label for="patientId" class="col-sm-2 control-label">Patient ID</label>
 					<div class="col-sm-12">
-						<input type="text" th:field="*{patientNote.patientId}" id="patientId" placeholder="Patient ID" class="col-4" readonly="true">
-						<!--<p class="text-danger" th:if="${#fields.hasErrors('patientNote.patientId')}" th:errors="*{patientNote.patientId}"></p>-->
+						<p class="pstyle_account"> PatientId: <span th:utext="${patientId}" style="font-weight: 700;"></span></p>
 					</div>
 				</div>
 				<div class="form-group">
 					<label for="note" class="col-sm-2 control-label">Note</label>
 					<div class="col-sm-12">
-						<textarea input type="text" th:field="*{note.note}" id="note" placeholder="Add note for patient." class="col-4" rows="6"></textarea>
-						<!--<p class="text-danger" th:if="${#fields.hasErrors('note.note')}" th:errors="*{note.note}"></p>-->
+						<textarea input type="text" th:field="*{notes}" id="notes" placeholder="Add note for patient." class="col-4" rows="6"></textarea>
+						<p class="text-danger" th:if="${#fields.hasErrors('notes')}" th:errors="*{notes}"></p>
 					</div>
 				</div>
 				
@@ -59,11 +58,25 @@
 					<div class="col-sm-12">
 						<input class="btn btn-success btn-sm" type="submit" value="Save">
 						<a th:href="@{'/note/list/' + ${patientId}}" class="btn btn-success btn-sm">Cancel</a>
+						<a href="/patient/list" class="btn btn-outline-info btn-sm">Note Patient List</a>
 					</div>
 				</div>
 			</form>
 		</div>
 	</div>
+	
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+		crossorigin="anonymous"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+		integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+		crossorigin="anonymous"></script>
 
 </body>
+
 </html>
