--- a/Notes/src/main/resources/templates/note/update.html
+++ b/Notes/src/main/resources/templates/note/update.html
@@ -43,14 +43,14 @@
 			<form action="#" th:action="@{/note/update/{patientId}(patientId=${patientId})}" th:object="${note}" method="post" class="form-horizontal" style="width: 100%">
 				<div class="form-group">
 					<div class="col-sm-12">
-						<p class="pstyle_account"> PatientId: <span th:utext="${patientId}" style="font-weight: 700;"></span></p>
+						<p class="pstyle_account">Id: <span th:utext="*{id}" style="font-weight: 700;"></span></p>
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="note" class="col-sm-2 control-label">Note</label>
+					<label for="noteText" class="col-sm-2 control-label">Note</label>
 					<div class="col-sm-12">
-						<textarea input type="text" th:field="*{text}" placeholder="Update note for patient." class="col-4" rows="6"></textarea>
-						<p class="text-danger" th:if="${#fields.hasErrors('text')}" th:errors="*{text}"></p>
+						<textarea input type="text" th:field="*{noteText}" placeholder="Update note for patient." class="col-4" rows="6"></textarea>
+						<p class="text-danger" th:if="${#fields.hasErrors('noteText')}" th:errors="*{noteText}"></p>
 					</div>
 				</div>
 				
