--- a/Notes/src/main/resources/templates/note/add.html
+++ b/Notes/src/main/resources/templates/note/add.html
@@ -57,8 +57,7 @@
 				<div class="form-group">
 					<div class="col-sm-12">
 						<input class="btn btn-success btn-sm" type="submit" value="Save">
-						<a th:href="@{'/note/list/' + ${patientId}}" class="btn btn-danger btn-sm">Cancel</a>
-						<a href="/patient/list" class="btn btn-outline-info btn-sm">Note Patient List</a>
+						<a href="/patient/list" class="btn btn-danger btn-sm">Cancel</a>
 					</div>
 				</div>
 			</form>
