--- a/Notes/src/main/resources/templates/note/update.html
+++ b/Notes/src/main/resources/templates/note/update.html
@@ -40,7 +40,7 @@
 
 	<div class="container col-md-12 mb-2 mt-4">
 		<div class="row">			
-			<form action="#" th:action="@{/note/update/{patientId}(patientId=${patientId})}" th:object="${note}" method="post" class="form-horizontal" style="width: 100%">
+			<form action="#" th:action="@{/note/update/{patientId}/{id} (patientId=${patientId}, id=${note.id})}" th:object="${note}" method="post" class="form-horizontal" style="width: 100%">
 				<div class="form-group">
 					<div class="col-sm-12">
 						<p class="pstyle_account">Id: <span th:utext="*{id}" style="font-weight: 700;"></span></p>
