--- a/Notes/src/main/resources/templates/note/view.html
+++ b/Notes/src/main/resources/templates/note/view.html
@@ -53,7 +53,7 @@
 				<div class="form-group">
 					<div class="col-sm-12">
 						<a href="/patient/list" class="btn btn-outline-success btn-sm">Note Patient List</a>
-						<a th:href="@{'/note/list/' + ${patientId}}" class="btn btn-success btn-sm">Cancel</a>
+						<a th:href="@{'/note/list/' + ${patientId}}" class="btn btn-danger btn-sm">Cancel</a>
 					</div>
 				</div>
 			</form>
