--- a/Notes/src/main/resources/templates/patient/patientList.html
+++ b/Notes/src/main/resources/templates/patient/patientList.html
@@ -63,13 +63,13 @@
 						<td> No Patients on a list </td>
 					</tr>
 					<tr class="text-center" th:each="patient : ${patientList}">
-						<td style="width: 10%" th:text="${patient.id}"></td>
-						<td th:text="${patient.givenName}"></td>
-						<td th:text="${patient.familyName}"></td>
-						<td th:text="${patient.dob}"></td>
-						<td th:text="${patient.sex}"></td>
-						<td th:text="${patient.address}"></td>
-						<td th:text="${patient.phone}"></td>
+						<td style="width: 10%" class="align-middle" th:text="${patient.id}"></td>
+						<td th:text="${patient.givenName}" class="align-middle"></td>
+						<td th:text="${patient.familyName}" class="align-middle"></td>
+						<td th:text="${patient.dob}" class="align-middle"></td>
+						<td th:text="${patient.sex}" class="align-middle"></td>
+						<td th:text="${patient.address}" class="align-middle"></td>
+						<td th:text="${patient.phone}" class="align-middle"></td>
 						<td style="width: 28%">
 							<a class="btn btn-outline-success btn-sm" th:href="@{/note/add/{patientId}(patientId=${patient.id})}">Add a Note</a>&nbsp;|&nbsp;
                     		<a class="btn btn-outline-success btn-sm" th:href="@{/note/list/{patientId}(patientId=${patient.id})}">View Patient's Notes</a>							
