setting up  embedded mongo database

--- a/Notes/src/main/resources/templates/note/list.html
+++ b/Notes/src/main/resources/templates/note/list.html
@@ -39,7 +39,7 @@
 
 	<div class="container col-md-6 mb-2">
 		<div class="row">
-			<div class="col-12 d-flex justify-content-center mt-3 mb-3 list-patients">List of notes for patient&nbsp;<span th:utext="${patientId}"></span></div>
+			<div class="col-12 d-flex justify-content-center mt-3 mb-3 list-patients">PATIENT&nbsp;<span th:utext="${patientId}"></span>&nbsp;- note list </div>
 			<table class="table table-bordered">
 				<thead>
 					<tr class="table-success">
@@ -72,10 +72,9 @@
 
 	<style>
 		.list-patients {
-			font-family: "Lucida Console", "Courier New", monospace;
+			font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
 			font-size: 30px;
-			font-weight: bold;
-			color: rgb(167, 199, 171);
+			color: #28a745;
 			}
 	</style>
 	
