--- a/Patients/src/main/resources/templates/patient/list.html
+++ b/Patients/src/main/resources/templates/patient/list.html
@@ -43,13 +43,13 @@
 
 	<div class="container col-md-7 mb-2">
 		<div class="row">
-			<div class="col-12 d-flex justify-content-center mt-3 mb-3 list-patients">List of patients</div>
+			<div class="col-12 d-flex justify-content-center mt-3 mb-3 list-patients">PATIENT LIST</div>
 			<table class="table table-bordered">
 				<thead>
 					<tr class="table-info">
 						<th class="text-center">Id</th>
-						<th class="text-center">Given Name</th>
 						<th class="text-center">Family Name</th>
+						<th class="text-center">Given Name</th>
 						<th class="text-center">Date of Birth</th>
 						<th class="text-center">Gender</th>
 						<th class="text-center">Address</th>
@@ -64,8 +64,8 @@
 					</tr>
 					<tr class="text-center" th:each="patient : ${patientList}">
 						<td style="width: 10%" th:text="${patient.id}" class="align-middle"></td>
+						<td th:text="${patient.familyName}" class="align-middle"></td>						
 						<td th:text="${patient.givenName}" class="align-middle"></td>
-						<td th:text="${patient.familyName}" class="align-middle"></td>
 						<td th:text="${patient.dob}" class="align-middle"></td>
 						<td th:text="${patient.sex}" class="align-middle"></td>
 						<td th:text="${patient.address}" class="align-middle"></td>
@@ -84,9 +84,8 @@
 
 	<style>
 		.list-patients {
-			font-family: "Lucida Console", "Courier New", monospace;
+			font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
 			font-size: 30px;
-			font-weight: bold;
 			color: #17a2b8;
 		}
 	</style>
