--- a/Reports/src/main/resources/templates/note/noteList.html
+++ b/Reports/src/main/resources/templates/note/noteList.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
-
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Report - Patient List</title>
+<title>Note List</title>
 
 <!-- Bootstrap -->
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
 	integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
 	crossorigin="anonymous">
-	
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -41,52 +37,41 @@
 		</div>
 	</nav>
 
-	<div class="container col-md-7 mb-2">
+	<div class="container col-md-6 mb-2">
 		<div class="row">
-			<div class="col-12 d-flex justify-content-center mt-3 mb-3 list-patientsReports">REPORTS - list of patients</div>
+			<div class="col-12 d-flex justify-content-center mt-3 mb-3 list-patientsNotesReports">PATIENT&nbsp;<span th:utext="${patientId}"></span>&nbsp;- note list </div>
 			<table class="table table-bordered">
 				<thead>
 					<tr class="table-warning">
-						<th class="text-center">Id</th>
-						<th class="text-center">Family Name</th>						
-						<th class="text-center">Given Name</th>
-						<th class="text-center">Date of Birth</th>
-						<th class="text-center">Gender</th>
-						<th class="text-center">Address</th>
-						<th class="text-center">Phone</th>
-						<th class="text-center">Action</th>
+						<th class="text-center">Note Id</th>
+						<th class="text-center">Note</th>
 					</tr>
 				</thead>
 
 				<tbody>
-					<tr th:if="${patientList.empty}">
-						<td> No Patients on a list </td>
+					<tr th:if="${noteList.empty}">
+						<td>No Notes on a list for patient <span th:utext="${patientId}" style="font-weight: 700;"></span></td>
 					</tr>
-					<tr class="text-center" th:each="patient : ${patientList}">
-						<td style="width: 10%" th:text="${patient.id}" class="align-middle"></td>
-						<td th:text="${patient.familyName}" class="align-middle"></td>						
-						<td th:text="${patient.givenName}" class="align-middle"></td>
-						<td th:text="${patient.dob}" class="align-middle"></td>
-						<td th:text="${patient.sex}" class="align-middle"></td>
-						<td th:text="${patient.address}" class="align-middle"></td>
-						<td th:text="${patient.phone}" class="align-middle"></td>
-						<td style="width: 28%">
-							<a class="btn btn-outline-warning btn-sm" th:href="@{/note/list/{patientId}(patientId=${patient.id})}">View Patient's Notes</a>		
-						</td>
-					</tr>
+					<tr class="text-center" th:each="note : ${noteList}">
+						<td style="width:50%" th:text="${note.id}" class="align-middle"></td>
+						<td class="align-middle" th:text="${#strings.abbreviate(note.noteText, 40)}"></td>
+					</tr>               
 				</tbody>
 			</table>
+
+			<a href="/patient/list" class="col-12 d-flex justify-content-center btn btn-lg btn-outline-warning mb-5 mt-3">Cancel</a>
+
 		</div>
 	</div>
-	
+
 	<style>
-		.list-patientsReports {
+		.list-patientsNotesReports {
 			font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
 			font-size: 30px;
 			color: #ffc107;
 		}
 	</style>
-
+	
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
 		crossorigin="anonymous"></script>
